[project]
name = "learn-verl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",  # Add torch as a dependency before flash-attn
    "datasets>=3.6.0",
    "msgspec>=0.15.0",
    "vllm>=0.8.5",
    "ninja>=1.11.1",
    # Remove flash-attn from here
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"